--- a/java/pom.xml
+++ b/java/pom.xml
@@ -31,6 +31,11 @@
             <scope>system</scope>
             <systemPath>${toolsjar}</systemPath>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.8</version>
+        </dependency>       
     </dependencies>
 
     <build>
