--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         java-version: 1.6
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file java/pom.xml
